// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Sizes applies large correctly if provided 1`] = `
<figure
  className="c-avatar c-avatar--large "
  data-garden-id="avatars.avatar"
  data-garden-version="version"
  size="large"
>
  <img
    src="test"
  />
</figure>
`;

exports[`Avatar Sizes applies small correctly if provided 1`] = `
<figure
  className="c-avatar c-avatar--small "
  data-garden-id="avatars.avatar"
  data-garden-version="version"
  size="small"
>
  <img
    src="test"
  />
</figure>
`;

exports[`Avatar States applies borderless styling if provided 1`] = `
<figure
  className="c-avatar c-avatar--borderless "
  data-garden-id="avatars.avatar"
  data-garden-version="version"
>
  <img
    src="test"
  />
</figure>
`;

exports[`Avatar States applies disabled styling if provided 1`] = `
<figure
  className="c-avatar is-disabled "
  data-garden-id="avatars.avatar"
  data-garden-version="version"
  disabled={true}
>
  <img
    src="test"
  />
</figure>
`;

exports[`Avatar applies default styling correctly 1`] = `
<figure
  className="c-avatar "
  data-garden-id="avatars.avatar"
  data-garden-version="version"
>
  <img
    src="test"
  />
</figure>
`;

exports[`Avatar applies system styling correclty if provided 1`] = `
<figure
  className="c-avatar c-avatar--system "
  data-garden-id="avatars.avatar"
  data-garden-version="version"
>
  <img
    src="test"
  />
</figure>
`;
